<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/open_link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recycler_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/recycler_note_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/recipe_description"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/edit"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/delete_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/delete"
        android:textColor="@color/delete_red" />
</LinearLayout>

